# Qualia

./: LICENSE  LICENSE.md  README.md  __init__.py  autograd.py  optim.py  setup.cfg  util.py
data/: mnist.py
examples/mnist/: classification_cnn.py
examples/reinforcement/: ddqn.py
examples/timeseries/: labor_stats.arff  time.hdf5  timeseries.py
nn/: functions.py
nn/modules/: __init__.py  activation.py  conv.py  linear.py  loss.py  normalization.py  pool.py
qualia/: autograd.py  util.py
qualia/data/: mnist.py
qualia/gui/: style.css
qualia/nn/: __init__.py  functions.py
qualia/nn/modules/: __init__.py  activation.py  conv.py  linear.py  loss.py  module.py  normalization.py  pool.py  rnn.py
