[metadata]
name = Qualia
version = attr: 0.01
url = https://github.com/Kashu7100/Qualia
author = Kashu
author_email = echo_six0566@yahoo.co.jp
license = MIT
description = deep learning framework deeply integrated with autograd designed for maximum flexibility
long_description = file: README.md

[options]
install_requires =
    numpy
    matplotlib
    h5py
    tqdm

